--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -15,6 +15,10 @@
     <link href="{{ asset ('ample/css/style.css')}}" rel="stylesheet">
     <!-- color CSS -->
     <link href="{{ asset ('ample/css/colors/default.css')}}" id="theme" rel="stylesheet">
+    <link href="{{ asset ('ample/bower_components/datatables/jquery.dataTables.min.css')}}" rel="stylesheet" type="text/css" />
+    <link href="{{ asset ('ample/bower_components/custom-select/custom-select.css')}}" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="{{ asset ('css/styles.css')}}">
+    {% block css %}{% endblock %}
 </head>
 
 <body class="fix-header">
@@ -141,16 +145,26 @@
                             <li> <a href="index3.html"><i class=" fa-fw">3</i><span class="hide-menu">Dashboard 3</span></a> </li>
                         </ul>
                     </li>
+
                     {% if app.user.rola == 'USER' %}
                     <li> <a href="index.html" class="waves-effect"><i class="mdi mdi-av-timer fa-fw" data-icon="v"></i> <span class="hide-menu"> Solicitudes <span class="fa arrow"></span> </span></a>
                         <ul class="nav nav-second-level">
-                            <li> <a href="index.html"><i class=" fa-fw">1</i><span class="hide-menu">Mis solicitudes </span></a> </li>
-                            <li> <a href="index2.html"><i class=" fa-fw">2</i><span class="hide-menu">Nueva solicitud </span></a> </li>
-                            <li> <a href="index3.html"><i class=" fa-fw">3</i><span class="hide-menu">Solicitudes Pendientes</span></a> </li>
+                            <li> <a href="{{ path ('solicitudes_misSolicitudes',{'status':'todas'})}}"><i class=" fa-fw"></i><span class="hide-menu">Mis solicitudes </span></a> </li>
+                            <li> <a href="{{ path ('solicitudes_misSolicitudes',{'status':'pendiente'})}}"><i class=" fa-fw"></i><span class="hide-menu">Solicitudes Pendientes</span></a> </li>
+                            <li> <a href="{{ path ('solicitudes_misSolicitudes',{'status':'aprobada'})}}"><i class=" fa-fw"></i><span class="hide-menu">Solicitudes Aprobadas</span></a> </li>
+                            <li> <a href="{{ path ('solicitudes_misSolicitudes',{'status':'rechazada'})}}"><i class=" fa-fw"></i><span class="hide-menu">Solicitudes Rechazadas</span></a> </li>
                         </ul>
                     </li>
-                     <li> <a href="map-google.html" class="waves-effect"><i class="mdi mdi-google-maps fa-fw"></i><span class="hide-menu">Mi Grupo</span></a> </li>
+                    <li> <a href="index.html" class="waves-effect"><i class="mdi mdi-av-timer fa-fw" data-icon="v"></i> <span class="hide-menu"> Reservas <span class="fa arrow"></span> </span></a>
+                        <ul class="nav nav-second-level">
+                            <li> <a href="{{ path ('reservas_misReservas')}}"><i class=" fa-fw">1</i><span class="hide-menu">Mis reservas </span></a> </li>
+                            <!-- <li> <a href="index3.html"><i class=" fa-fw">3</i><span class="hide-menu">Reservas pendientes</span></a> </li>
+                            <li> <a href="index3.html"><i class=" fa-fw">3</i><span class="hide-menu">Reservas finalizadas</span></a> </li> -->
+                        </ul>
+                    </li>
+                     <li> <a href="{{ path ('personas_index')}}" class="waves-effect"><i class="mdi mdi-google-maps fa-fw"></i><span class="hide-menu">Mi Grupo</span></a> </li>
                     {% endif %}
+
                     {% if app.user.rola == 'ADMIN' %}
                     <li> <a href="index.html" class="waves-effect"><i class="mdi mdi-av-timer fa-fw" data-icon="v"></i> <span class="hide-menu"> Usuarios <span class="fa arrow"></span> </span></a>
                         <ul class="nav nav-second-level">
@@ -160,8 +174,8 @@
                     </li>
                     <li> <a href="index.html" class="waves-effect"><i class="mdi mdi-av-timer fa-fw" data-icon="v"></i> <span class="hide-menu"> Solicitudes <span class="fa arrow"></span> </span></a>
                         <ul class="nav nav-second-level">
-                            <li> <a href="index.html"><i class=" fa-fw">1</i><span class="hide-menu">Solicitudes </span></a> </li>
-                            <li> <a href="index3.html"><i class=" fa-fw">3</i><span class="hide-menu">Solicitudes Pendientes</span></a> </li>
+                            <li> <a href="{{ path ('solicitudes_indexAdmin',{'status':'todas'})}}"><i class=" fa-fw">1</i><span class="hide-menu">Solicitudes </span></a> </li>
+                            <li> <a href="{{ path ('solicitudes_indexAdmin',{'status':'pendiente'})}}"><i class=" fa-fw">3</i><span class="hide-menu">Solicitudes Pendientes</span></a> </li>
                         </ul>
                     </li>
                     <li> <a href="index.html" class="waves-effect"><i class="mdi mdi-av-timer fa-fw" data-icon="v"></i> <span class="hide-menu"> Reservas <span class="fa arrow"></span> </span></a>
@@ -229,11 +243,7 @@
                     <!-- /.col-lg-12 -->
                 </div>
                 <div class="row">
-                    <div class="col-md-12">
-                        <div class="white-box">
-                            {% block body %}{% endblock %}
-                        </div>
-                    </div>
+                    {% block body %}{% endblock %}
                 </div>
                 <!-- ============================================================== -->
                 <!-- Right sidebar -->
@@ -289,7 +299,6 @@
     </div>
     <!-- /#wrapper -->
 
-    {% block javascripts %}{% endblock %}
     <!-- /#wrapper -->
     <!-- jQuery -->
     <script src="{{ asset ('ample/bower_components/jquery/dist/jquery.min.js')}}"></script>
@@ -305,5 +314,8 @@
     <script src="{{ asset ('ample/js/custom.min.js')}}"></script>
     <!--Style Switcher -->
     <script src="{{ asset ('ample/bower_components/styleswitcher/jQuery.style.switcher.js')}}"></script>
+    <script src="{{ asset ('ample/bower_components/datatables/jquery.dataTables.min.js')}}"></script>
+    <script src="{{ asset ('ample/bower_components/custom-select/custom-select.min.js')}}" type="text/javascript"></script>
+    {% block javascripts %}{% endblock %}
 </body>
 </html>
