--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -181,9 +181,9 @@
                     <li> <a href="index.html" class="waves-effect"><i class="mdi mdi-av-timer fa-fw" data-icon="v"></i> <span class="hide-menu"> Reservas <span class="fa arrow"></span> </span></a>
                         <ul class="nav nav-second-level">
                             <li> <a href="index.html"><i class=" fa-fw">1</i><span class="hide-menu">Eventos</span></a> </li>
-                            <li> <a href="index3.html"><i class=" fa-fw">3</i><span class="hide-menu">Preguntas frecuentes</span></a> </li>
+                            <li> <a href="/faqs"><i class=" fa-fw">2</i><span class="hide-menu">Preguntas frecuentes</span></a> </li>
                             <li> <a href="index3.html"><i class=" fa-fw">3</i><span class="hide-menu">Disponibilidad de vagas</span></a> </li>
-                            <li> <a href="index3.html"><i class=" fa-fw">3</i><span class="hide-menu">Confirmar reservas</span></a> </li>
+                            <li> <a href="index3.html"><i class=" fa-fw">4</i><span class="hide-menu">Confirmar reservas</span></a> </li>
                         </ul>
                     </li>
                    <li> <a href="index.html" class="waves-effect"><i class="mdi mdi-av-timer fa-fw" data-icon="v"></i> <span class="hide-menu"> Hospedaje <span class="fa arrow"></span> </span></a>
@@ -200,7 +200,7 @@
                     </li>
                     <li> <a href="index.html" class="waves-effect"><i class="mdi mdi-av-timer fa-fw" data-icon="v"></i> <span class="hide-menu"> Servicios <span class="fa arrow"></span> </span></a>
                         <ul class="nav nav-second-level">
-                            <li> <a href="index.html"><i class=" fa-fw">1</i><span class="hide-menu">Servicios por usuario</span></a> </li>
+                            <li> <a href="/servicios"><i class=" fa-fw">1</i><span class="hide-menu">Servicios por usuario</span></a> </li>
                         </ul>
                     </li>
                     <li> <a href="index.html" class="waves-effect"><i class="mdi mdi-av-timer fa-fw" data-icon="v"></i> <span class="hide-menu"> Contabilidad  <span class="fa arrow"></span> </span></a>
