--- a/src/AppBundle/Resources/views/Servicios/index.html.twig
+++ b/src/AppBundle/Resources/views/Servicios/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}AppBundle:Users:index{% endblock %}
 {% block body %}
 <h1>Servicios</h1>
-<button class="dataTables_filter btn btn-success waves-effect waves-light btn-rouned col-md"><a href="/servicios/nuevo" style="color:white;">Nuevo</a></button>
+<button class="dataTables_filter btn btn-success waves-effect waves-light btn-rouned col align-self-end"><a href="/servicios/nuevo" style="color:white; margin-botom : 5px ;">Nuevo</a></button>
 
 <div class="tab-container">
     <ul class="nav nav-tabs nav-tabs-classic" role="tablist">
@@ -96,3 +96,4 @@
                 </div>
         </div>
 {% endblock %}
+
