--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -200,7 +200,7 @@
                     </li>
                     <li> <a href="index.html" class="waves-effect"><i class="mdi mdi-av-timer fa-fw" data-icon="v"></i> <span class="hide-menu"> Servicios <span class="fa arrow"></span> </span></a>
                         <ul class="nav nav-second-level">
-                            <li> <a href="/servicios"><i class=" fa-fw">1</i><span class="hide-menu">Servicios por usuario</span></a> </li>
+                            <li> <a href="/servicios"><i class=" fa-fw">1</i><span class="hide-menu">Servicios</span></a> </li>
                         </ul>
                     </li>
                     <li> <a href="index.html" class="waves-effect"><i class="mdi mdi-av-timer fa-fw" data-icon="v"></i> <span class="hide-menu"> Contabilidad  <span class="fa arrow"></span> </span></a>
