maquetacion de tabla de comidas

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -195,7 +195,7 @@
                     </li>
                     <li> <a href="index.html" class="waves-effect"><i class="mdi mdi-av-timer fa-fw" data-icon="v"></i> <span class="hide-menu"> Comidas <span class="fa arrow"></span> </span></a>
                         <ul class="nav nav-second-level">
-                            <li> <a href="index.html"><i class=" fa-fw">1</i><span class="hide-menu">Generar lista</span></a> </li>
+                            <li> <a href="/reservas/comidas"><i class=" fa-fw">1</i><span class="hide-menu">Generar lista</span></a> </li>
                         </ul>
                     </li>
                     <li> <a href="index.html" class="waves-effect"><i class="mdi mdi-av-timer fa-fw" data-icon="v"></i> <span class="hide-menu"> Servicios <span class="fa arrow"></span> </span></a>
