--- a/src/AppBundle/Resources/views/Reservas/index.html.twig
+++ b/src/AppBundle/Resources/views/Reservas/index.html.twig
@@ -24,7 +24,7 @@
 					<th>Acciones</th>
 				</tr>
 			</thead>
-			<tbody>
+			<tbody style="text-align:center;">
 				{% for reserva in reservas %}
 				<tr>
 					<td>{{reserva.id}}</td>
