usuarios-personas-servicios

--- a/src/AppBundle/Resources/views/Personas/edit.html.twig
+++ b/src/AppBundle/Resources/views/Personas/edit.html.twig
@@ -6,7 +6,7 @@
 {% block body %}
 
 <div class="col-md-4 col-md-offset-4">
-	<a href="{{ path ('personas_todas')}}">Atras</a>
+	<a href="/{{info}}/edit">Atras</a>
 	<div class="white-box">
 		<div class="panel-body">
 			{{form_start(form)}}
