--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -169,7 +169,7 @@
                     <li> <a href="index.html" class="waves-effect"><i class="mdi mdi-av-timer fa-fw" data-icon="v"></i> <span class="hide-menu"> Usuarios <span class="fa arrow"></span> </span></a>
                         <ul class="nav nav-second-level">
                             <li> <a href="index.html"><i class=" fa-fw">1</i><span class="hide-menu">Nuevo usuario </span></a> </li>
-                            <li> <a href="{{ path ('personas_todas')}}"><i class=" fa-fw">3</i><span class="hide-menu">Usuarios</span></a> </li>
+                            <li> <a href="{{ path ('users_all')}}"><i class=" fa-fw">3</i><span class="hide-menu">Usuarios</span></a> </li>
                         </ul>
                     </li>
                     <li> <a href="index.html" class="waves-effect"><i class="mdi mdi-av-timer fa-fw" data-icon="v"></i> <span class="hide-menu"> Solicitudes <span class="fa arrow"></span> </span></a>
